Added logger for Main class, SonarLint refactoring